Realizacion del Header

--- a/ProyectoIntgrador_GilliEmiliano/angular.json
+++ b/ProyectoIntgrador_GilliEmiliano/angular.json
@@ -23,9 +23,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -97,5 +100,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "0a591b82-665d-4cd9-af85-443deb5054d4"
   }
 }
